# Natsume

./: .gitignore  Cargo.toml  README.md  build.rs  diesel.toml
.cargo/: config.toml
.context/history/: commits.jsonl  commits.md
.github/workflows/: ci.yaml
assets/: Caddyfile  config_client.toml.example  config_server.toml.example  configure_client.sh  configure_judgehost.sh  data.CSV  generate_cert.sh  natsume.service  print_client.py  print_typst.py
data_preprocess/: README.md  data_preprocess.py  pyproject.toml  upload_organization_logo.py
migrations/00000000000000_diesel_initial_setup/: up.sql
panel/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
panel/src/: App.vue  main.ts  schema.ts  service.ts  store.ts
panel/src/components/custom/: DataTablePagination.vue
scripts/: build-all.bat  build-all.ps1  build-all.sh  cross-build.sh
src/: client.rs  config.rs  crypto.rs  main.rs  server.rs
src/client/: bind.rs  check.rs  clean.rs  desktop.rs  monitor.rs  permission.rs  session.rs  sync.rs
src/server/: database.rs  schema.rs  services.rs
src/server/services/: bind.rs  ip.rs  panel.rs  report.rs  status.rs  sync.rs
