[package]
name = "Natsume"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
once_cell = { version = "1.21.3", features = ["parking_lot"] }
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-unwrap = "1.0.1"
chrono = "0.4.40"
actix-web = { version = "4.10.2", default-features = false, features = [
    "macros",
    "rustls-0_23",
], optional = true }
actix-files = { version = "0.6.6", optional = true }
actix-cors = { version = "0.7.1", optional = true }
# Diesel and dataset
diesel = { version = "2.2.9", features = ["sqlite", "r2d2"], optional = true }
diesel_migrations = { version = "2.2.0", optional = true }
libsqlite3-sys = { version = "0.30", features = ["bundled"], optional = true }
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "charset",
    "blocking",
    "rustls-tls",
], optional = true }
csv = { version = "1.3.1", optional = true }
# TLS related crates
rcgen = { version = "0.13.2", optional = true }
rustls = { version = "0.23.26", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
sha2 = "0.10.8"
hex = "0.4.3"
base64 = "0.22.1"

[features]
default = []
server = [
    "actix-web",
    "actix-files",
    "actix-cors",
    "diesel",
    "diesel_migrations",
    "libsqlite3-sys",
    "rcgen",
    "rustls",
    "rustls-pemfile",
    "csv",
]
client = ["reqwest"]

[[bin]]
name = "natsume_client"
path = "src/main.rs"
required-features = ["client"]

[[bin]]
name = "natsume_server"
path = "src/main.rs"
required-features = ["server"]
