[package]
name = "Natsume"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
once_cell = { version = "1.21.3", features = ["parking_lot"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-unwrap = "1.0.1"
chrono = "0.4.44"
version = "3.0.0"
actix-web = { version = "4.13.0", default-features = false, features = [
    "macros",
    "rustls-0_23",
], optional = true }
actix-files = { version = "0.6.10", optional = true }
actix-cors = { version = "0.7.1", optional = true }
rust-embed = { version = "8.11.0", optional = true }
mime_guess = { version = "2.0.5", optional = true }
# Diesel and dataset
diesel = { version = "2.3.6", features = ["sqlite", "r2d2"], optional = true }
diesel_migrations = { version = "2.3.1", optional = true }
libsqlite3-sys = { version = "0.35", features = ["bundled"], optional = true }
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "charset",
    "blocking",
    "rustls",
], optional = true }
csv = { version = "1.4.0", optional = true }
# TLS related crates
rcgen = { version = "0.14.7", optional = true }
rustls = { version = "0.23.37", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
sha2 = "0.10.9"
hex = "0.4.3"
base64 = "0.22.1"

[features]
default = []
server = [
    "actix-web",
    "actix-files",
    "actix-cors",
    "diesel",
    "diesel_migrations",
    "libsqlite3-sys",
    "rcgen",
    "rustls",
    "rustls-pemfile",
    "csv",
    "rust-embed",
    "mime_guess",
]
client = ["reqwest"]

[[bin]]
name = "natsume_client"
path = "src/main.rs"
required-features = ["client"]

[[bin]]
name = "natsume_server"
path = "src/main.rs"
required-features = ["server"]
